# gym-sentiment-guard

./: .dockerignore  .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  DA.ipynb  Dockerfile  Experiment.ipynb  MODEL_MODULES_PLAN.md  README.md  SVM.ipynb  Tests.ipynb  debug.csv  docker-compose.yaml  pyproject.toml
.agent/rules/: ml-project-guideline-01.md  ml-project-guideline-02.md  python-performance-01.md  python-performance-02.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  experiment.yml  feature.yml
configs/: contrast_keywords.txt  error_analysis.yaml  experiment.yaml  logreg_v1.yaml  logreg_v2.yaml  logreg_v3.yaml  logreg_v4.yaml  preprocess.yaml  serving.docker.yaml  serving.yaml  stopwords_never_remove_spanish.txt  stopwords_spanish_safe.txt  structural_punctuation.txt
data/raw/: test.csv  (+25 more)
docker/: requirements.txt
docs/: API_SERVING_GUIDE.md  CLEANING_NOTES.md  CONTEXT_SUMMARY.md  DOCKER_SERVING_GUIDE.md  ERROR_ANALYSIS_MODULE.md  EXPERIMENTS_GUIDE.md  EXPERIMENT_PROTOCOL.md  PHASE1_IMPLEMENTATION.md  PHASE6_IMPLEMENTATION.md  PREDICT_EXPLAIN_IMPLEMENTATION_PLAN.md  PROJECT_REVIEW.md  REPORTING_STANDARDS.md  SERVING_IMPLEMENTATION_PLAN.md
scripts/: eval_fasttext_lid.py  eval_transformer_sentiment.py  incorrect_predictions.csv  llm_service.py  merge_language_datasets.py  merge_processed_datasets.py  merge_sampled_languages.py  neutral_predictions.csv  process_pending_csvs.py  remove_neutral_from_merged.py  sample_language_reviews.py  sentiment_llm_test.py  tag_ground_truth_languages.py
tests/: conftest.py
tmp/: raw.csv
(+1455 files in other folders)
